--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 </body>
 <script src="app.js"></script>
 <script>
-
+console.log("ewr");
   var budget = JSON.stringify({
                           "f":20,
                           "e":30,
@@ -28,8 +28,8 @@
                           "b":1000
                           });
   var socket = io.connect('http://localhost:5000');
-  socket.emit('userinput',budget);
-  socket.on('hi', function (data) {
+  socket.emit('nextday');
+  socket.on('parsedmint', function (data) {
     console.log(data);
   });
   /*
