--- a/app/index.html
+++ b/app/index.html
@@ -8,19 +8,33 @@
     <script src="angular.min.js"></script>
   </head>
   <body ng-controller="formController">
-<!--
-  <ul>
-    <li ng-repeat="phone in phones">
-      <span>{{phone.name}}</span>
-      <p>{{phone.snippet}}</p>
-    </li>
-  </ul>
--->
-{{a}}
+  <div class="container">
+  <div class="row">
+  <button type="button">asdf</button>
+  </div>
+</div>
 </body>
-<script src="app.js"></script>
+<!--<script src="app.js"></script>-->
 <script>
-console.log("ewr");
+
+  var asdfinance = angular.module('asdfinance',[]);
+
+asdfinance.controller('formController', function PhoneListController($scope) {
+  /*
+  $scope.phones = [
+    {
+      name: 'Nexus S',
+      snippet: 'Fast just got faster with Nexus S.'
+    }, {
+      name: 'Motorola XOOM™ with Wi-Fi',
+      snippet: 'The Next, Next Generation tablet.'
+    }, {
+      name: 'MOTOROLA XOOM™',
+      snippet: 'The Next, Next Generation tablet.'
+    }
+  ];*/
+  $scope.a = "ttt";
+});
   var budget = JSON.stringify({
                           "f":20,
                           "e":30,
