--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <body ng-controller="formController">
   <div class="container">
   <div class="row">
-  <button type="button">asdf</button>
+  <button type="button" ng-click="sendData">Next Day</button>
   </div>
 </div>
 </body>
@@ -19,7 +19,11 @@
 
   var asdfinance = angular.module('asdfinance',[]);
 
-asdfinance.controller('formController', function PhoneListController($scope) {
+  asdfinance.controller('formController', function PhoneListController($scope) {
+    $scope.sendData = function(){
+      socket.emit('nextday');
+    }
+  });
   /*
   $scope.phones = [
     {
@@ -33,6 +37,7 @@ asdfinance.controller('formController', function PhoneListController($scope) {
       snippet: 'The Next, Next Generation tablet.'
     }
   ];*/
+  /*
   $scope.a = "ttt";
 });
   var budget = JSON.stringify({
@@ -45,7 +50,7 @@ asdfinance.controller('formController', function PhoneListController($scope) {
   socket.emit('nextday');
   socket.on('parsedmint', function (data) {
     console.log(data);
-  });
+  });*/
   /*
   socket.on('nextday', function (data) {
     console.log(data);
