--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <body ng-controller="formController">
   <div class="container">
   <div class="row">
-  <button type="button" ng-click="sendData">Next Day</button>
+  <button type="button" ng-click="sendData()">Next Day</button>
   </div>
 </div>
 </body>
@@ -18,12 +18,16 @@
 <script>
 
   var asdfinance = angular.module('asdfinance',[]);
-
-  asdfinance.controller('formController', function PhoneListController($scope) {
+  var socket = io.connect('http://localhost:5000');
+  asdfinance.controller('formController', ['$scope', function($scope) {
     $scope.sendData = function(){
+      //console.log(4);
       socket.emit('nextday');
-    }
+      socket.on('parsedmint', function (data) {
+    console.log(data);
   });
+    }
+  }]);
   /*
   $scope.phones = [
     {
